k8s/prd/simm-teste-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simm-teste-deployment
  namespace: simm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simm-teste
  template:
    metadata:
      labels:
        app: simm-teste
    spec:
      containers:
      - name: simm-teste-container
        image: gcr.io/simm-343120/simm-teste:main
        ports:
          - containerPort: 3000
