k8s/prd/simm-teste-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simm-teste-service
  namespace: simm
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 80
  selector:
    app: simm-teste
